Fixing nav sizing on mobile

--- a/src/assets/scss/layout/_nav.scss
+++ b/src/assets/scss/layout/_nav.scss
@@ -14,9 +14,9 @@
 			'padding #{_duration(transition)} ease',
 		));
 		@include color-typography(invert);
-		position: absolute;
+		/*position: absolute;*/
 		width: _size(inner);
-		max-width: calc(100% - #{_size(element-margin) * 2});
+		max-width: calc(100% - 0em});
 		padding: 1em;
 		background-color: _palette(invert, bg-alt);
 		border-top-left-radius: _size(border-radius-main);
